[package]
name = "udp-over-tcp"
description = "Command-line tool for forwarding UDP datagrams over TCP."
version = "0.1.0"
edition = "2021"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
repository = "https://github.com/jonhoo/udp-over-tcp"
keywords = ["networking", "tcp", "udp"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.70.0"
license = "MIT OR Apache-2.0"

[dependencies]
eyre = "0.6.12"
tokio = { version = "1.39.1", features = ["rt", "macros", "net", "time", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
lexopt = "0.3.0"
bytes = "1.6.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
# TODO: watch out for https://github.com/axodotdev/cargo-dist/issues/253
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Produce GitHub Attestations
github-attestations = true
