[package]
name = "udp-over-tcp"
description = "Command-line tool for tunneling UDP datagrams over TCP."
version = "0.1.5"
edition = "2021"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
repository = "https://github.com/jonhoo/udp-over-tcp"
keywords = ["networking", "tcp", "udp"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.70.0"
license = "MIT OR Apache-2.0"

[dependencies]
eyre = "0.6.12"
tokio = { version = "1.47.0", features = ["rt", "macros", "net", "time", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
lexopt = "0.3.0"
bytes = "1.7.0"

# TODO: watch out for https://github.com/axodotdev/cargo-dist/issues/253
# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
